[gd_scene load_steps=4 format=3 uid="uid://h5mxjah6wflt"]

[ext_resource type="Script" uid="uid://e8j0mx6lm4u0" path="res://Scripts/laser.gd" id="1_xwoyh"]
[ext_resource type="Texture2D" uid="uid://bgtlosh2hldab" path="res://Assets/art/sprites/Armas/Proyectiles/Dirk_Laser.png" id="2_2cboi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fe57j"]
size = Vector2(118, 20)

[node name="Laser" type="Area2D"]
script = ExtResource("1_xwoyh")
base_width = 200.0
base_length = 40.0

[node name="laserpng" type="Sprite2D" parent="."]
scale = Vector2(0.22508039, 0.20900321)
texture = ExtResource("2_2cboi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_fe57j")

[node name="TimerDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TimerTick" type="Timer" parent="."]

[connection signal="timeout" from="TimerDuration" to="." method="_on_timer_duration_timeout"]
[connection signal="timeout" from="TimerTick" to="." method="_on_timer_tick_timeout"]
